Version 7.1.0
- Added _rxpoll() to check for character without a timeout
- Reverted _rx* functions to no longer use 28 bit internal buffer; this is less resilient to P2 side timing changes, but better if PC timing is uncertain
- Added DITTO to duplicate code/data in Spin2 assembly
- Many internal changes to support DITTO and future assembly work
- Updated -gbrk debug code (thanks Ada)

Version 7.0.5
- Fixed internal handle usage to avoid conflicts with BASIC hard-coded handles
- Fixed potential inline register re-use bug (thanks to Ada)

Version 7.0.4
- Added `-Opeek-args` optimization flag (the optimization was always there, this provides a way to disable it)
- Fixed an issue with casting to different size in nucode
- Fixed incorrect line info in some DEBUG statements
- Fixed incorrect re-use of parameter registers near functions that have an ABORT or THROW

Version 7.0.3
- Fixed .fpide search so file names are relative to the .fpide file
- Improved listing file tracking of COG pc (still buggy, but better)
- Made inline function expansion more robust
- Remove binary output when errors are detected in final compilation

Version 7.0.2
- Avoid a crash if a .fpide file is not found
- Fixed a problem with `loc #\imm` in inline asm

Version 7.0.1
- Fixed incorrect casts of arrays
- Fixed incorrect handling of weak symbol aliases
- Put a dummy entry at the beginning of the method table, to represent NULL
- Removed unnecessary definition of PINMODE

Version 7.0.0
- Added Spin2 structures (basically small objects)
- Added Spin2 TASK functions
- Added BOOL debug modifier for -g
- Added some of the v44 Spin2 builtin methods like byteswap
- Added warning for rep without @
- Added %QUAD keyword for 64 bit variables in Spin2
- Added some experimental optimizations (thanks to Ada)
- Added ability to fall back to more compatible inline assembly (-Ono-fast-inline-asm)
- Allowed RET in fcache'd inline assembly